fix: line alignment

--- a/admin/src/components/Sidenav/sidenav.scss
+++ b/admin/src/components/Sidenav/sidenav.scss
@@ -57,7 +57,7 @@
 		&::before {
 			content: '';
 			position: absolute;
-			margin-left: rem(26);
+			margin-left: rem(26.6);
 			width: 2px;
 			height: 100%;
 			background-color: #efefef;
